// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vanta test entries 1`] = `
Array [
  "Processed 7 records",
  "Processed records by stream: {\\\\\\"mytestsource__vanta__vulnerabilities\\\\\\":7}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 18 records",
  "Would write records by model: {\\\\\\"cicd_Artifact\\\\\\":1,\\\\\\"cicd_ArtifactVulnerability\\\\\\":2,\\\\\\"cicd_Repository\\\\\\":1,\\\\\\"sec_Vulnerability\\\\\\":6,\\\\\\"vcs_Repository\\\\\\":4,\\\\\\"vcs_RepositoryVulnerability\\\\\\":4}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`vanta test entries with duplicate UIDs 1`] = `
Array [
  "Processed 2 records",
  "Processed records by stream: {\\\\\\"mytestsource__vanta__vulnerabilities\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 2 records",
  "Would write records by model: {\\\\\\"cicd_ArtifactVulnerability\\\\\\":1,\\\\\\"sec_Vulnerability\\\\\\":1}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`vanta test getting update records 1`] = `
Array [
  "Processed 7 records",
  "Processed records by stream: {\\\\\\"mytestsource__vanta__vulnerabilities\\\\\\":7}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 22 records",
  "Would write records by model: {\\\\\\"cicd_Artifact\\\\\\":1,\\\\\\"cicd_ArtifactVulnerability\\\\\\":2,\\\\\\"cicd_ArtifactVulnerability__Update\\\\\\":2,\\\\\\"cicd_Repository\\\\\\":1,\\\\\\"sec_Vulnerability\\\\\\":6,\\\\\\"vcs_Repository\\\\\\":4,\\\\\\"vcs_RepositoryVulnerability\\\\\\":4,\\\\\\"vcs_RepositoryVulnerability__Update\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;

exports[`vanta test getting update records 2`] = `
Array [
  "Processed 2 records",
  "Processed records by stream: {\\\\\\"mytestsource__vanta__vulnerabilities\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Would write 6 records",
  "Would write records by model: {\\\\\\"cicd_ArtifactVulnerability\\\\\\":1,\\\\\\"cicd_ArtifactVulnerability__Update\\\\\\":2,\\\\\\"sec_Vulnerability\\\\\\":1,\\\\\\"vcs_RepositoryVulnerability__Update\\\\\\":2}\\"},\\"type\\":\\"LOG\\"}",
  "Skipped 0 records",
  "Errored 0 records",
]
`;
